# FastAPIPet

./: README.md  crud.py  item_views.py  main.py  microshop.py  pyproject.toml  queryis.sql
alembic/versions/: 2023_12_27_1429-bf1ac9f2df7b_create_products_table.py  2023_12_27_1444-816239a62733_create_users_table.py  2023_12_27_1502-e619923498f4_create_posts_table.py  2023_12_27_1718-20a4a2a8967b_create_profile_table.py  2023_12_28_1855-db8778892d71_create_order_table.py  2023_12_29_1246-9690cadbb439_add_count_column_to_order_product_.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/models/: __init__.py  base.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
crud/: __init__.py  base.py
users/: crud.py  schemas.py  views.py
