[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Паша Лозинский <GeNeytly@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.106.0"
pytest = "^7.4.3"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
