[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Паша Лозинский <GeNeytly@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.106.0"
pytest = "^7.4.3"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = {extras = ["asincio"], version = "^2.0.23"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
